test/e2e/testdata/httproute-rewrite-host-custom-dnsdomain.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-host-custom-dnsdomain
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-service-custom-dnsdomain
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: backend-host-rewrite-custom-dnsdomain
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: backend-host-rewrite-custom-dnsdomain
  namespace: gateway-conformance-infra
spec:
  urlRewrite:
    hostname:
      type: Backend
